styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
html{
  scroll-behavior: smooth;
}
body{
    background: #000;
}
/* ===== Scrollbar CSS ===== */
  * {
    scrollbar-width: auto;
    scrollbar-color: #b80000 #000000;
  }
  *::-webkit-scrollbar {
    width: 8px;
  }

  *::-webkit-scrollbar-track {
    background: #000000;
  }

  *::-webkit-scrollbar-thumb {
    background-color: #b80000;
    border-radius: 20px;
    border: 8px solid #b80000;
  }
  *{
    -webkit-tap-highlight-color: transparent;
  }
  .exit{
    transition-timing-function: cubic-bezier(0.05,0.7,0.1,1.0);
  }
  .enter{
    transition-timing-function: cubic-bezier(0.3,0.0,0.8,0.15);
  }
  .infinite-scroll-component__outerdiv{
    z-index: -50;
  }
  @layer utilities{

.show{
  opacity: 1 !important;
  pointer-events: all;
}
  }
  

